--- a/stilo.css
+++ b/stilo.css
@@ -83,6 +83,8 @@ body img{
 	background-color: #DFDFDF;
 	margin: 10px 0px 10px 0px;
 	padding: 5px;
-}
-@media only screen and (min-width: 600px) {
+}@media only screen and (max-width: 600px) {
+	.basec li{
+		width: 40%;
+	}
 }
