--- a/stilo.css
+++ b/stilo.css
@@ -41,9 +41,13 @@ body img{
 }
 .agendar button{
 	font-family: Arial black;
+	border:none;
+	border-radius: 10px;
 	width: 100%;
 	font-size: 200%;
 	position: relative;
+	background-color: #33278D;
+	color: white;
 }
 .caixa{
 
@@ -71,19 +75,51 @@ body img{
 }
 .basec h1{
 	text-align: center;
+	color: #4B4B4D;
+	font-family: arial black;
+	font-size: 200%;
+	text-transform: uppercase;
+	text-decoration: underline;
 }
-.basec ol{
+.basec .ol{
 	text-align: center;
 }
-.basec li{
+.basec .li{
 	list-style: none;
 	display: inline-block;
 	position: relative;
 	width: 30%;
-	background-color: #DFDFDF;
 	margin: 10px 0px 10px 0px;
 	padding: 5px;
+	color: #4B4B4D;
+	font-family: arial black;
 }
+.li figcaption{
+	background-color: #33278D;
+	position: relative;
+	display: block;
+	width: 100%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-bottom-right-radius: 7px;
+	border-bottom-left-radius: 7px;
+	color: white;
+	font-family: arial;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 600px) {
 	.basec li{
 		width: 40%;
