--- a/stilo.css
+++ b/stilo.css
@@ -16,7 +16,7 @@ body img{
 	margin-top:12px;
 }
 .agendar{
-	background-color: white;
+	background-color: red;
 	display: block;
 	position: relative;
 	width: 90%;
