--- a/stilo.css
+++ b/stilo.css
@@ -138,7 +138,7 @@ body{  background-color: #DFDFDF;
 
 
 
-@media only screen and (max-width: px) {
+@media only screen and (max-width: 600px) {
 	.basec .li{
 		width: 80%;
 		height: 60%;
