--- a/stilo.css
+++ b/stilo.css
@@ -4,24 +4,25 @@
 	padding: 0px;
 	font-family: arial;
 }
-body{  background-color: #DFDFDF;
+body{  background-color: #143850;
 	position: relative;
 	width: 100%;
-	padding-top: 36px;
+	padding-top: 44px;
 }
 .menu{
 	position: fixed;
-	background-color: #33278D;
-	margin-top:-36px;
+	background-color: #095E7D;
+	margin-top:-44px;
 	width: 100%;
 	z-index: 1;
 	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+	text-align: center;
 }
-.menu img{
+.menu h1 {
 	position: relative;
 	display: block;
-	height: 36px;
-	margin: 0 auto;
+	font-family: arial black;
+	color: white;
 }
 .agendar{
 	background-color: white;
@@ -42,12 +43,9 @@ body{  background-color: #DFDFDF;
 }
 .agendar h1{
 	font-family: Arial black;
-	font-size: 100%;
+	font-size: 120%;
 	padding-top: 5px;
-}
-.agendar h2{
-	font-size: 100%;
-	font-family: Arial;
+	color: #1F92B1;
 }
 .agendar button{
 	font-family: Arial black;
@@ -56,7 +54,7 @@ body{  background-color: #DFDFDF;
 	width: 100%;
 	font-size: 200%;
 	position: relative;
-	background-color: #33278D;
+	background-color: #1F92B1;
 	color: white;
 }
 .caixa{
@@ -87,7 +85,7 @@ body{  background-color: #DFDFDF;
 }
 .basec h1{
 	text-align: center;
-	color: #4B4B4D;
+	color: #143850;
 	font-family: arial black;
 	font-size: 200%;
 	text-transform: uppercase;
@@ -109,11 +107,11 @@ body{  background-color: #DFDFDF;
 	width: 30%;
 	margin: 10px 0px 10px 0px;
 	padding: 5px;
-	color: #4B4B4D;
+	color: #143850;
 	font-family: arial black;
 }
 .li figcaption{
-	background-color: #33278D;
+	background-color: #1F92B1;
 	position: relative;
 	display: block;
 	width: 100%;
