--- a/stilo.css
+++ b/stilo.css
@@ -45,7 +45,7 @@ body{  background-color: #143850;
 	font-family: Arial black;
 	font-size: 120%;
 	padding-top: 5px;
-	color: #1F92B1;
+	color: #143850;
 }
 .agendar button{
 	font-family: Arial black;
@@ -56,6 +56,13 @@ body{  background-color: #143850;
 	position: relative;
 	background-color: #1F92B1;
 	color: white;
+	margin-bottom:8px;
+}
+.agendar iframe{
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
 }
 .caixa{
 
@@ -71,6 +78,34 @@ body{  background-color: #143850;
 	padding-left: 10px;
 	padding-right: 10px;
 	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+}
+.caixa h1{
+	text-align: center;
+	color: #143850;
+	font-family: arial black;
+	font-size: 150%;
+	text-transform: uppercase;
+	position: relative;
+}
+.caixa #entraNum{
+	position: relative;
+	display: inline-block;
+	height: 25px;
+	width: 30%;
+	text-align: center;
+}
+.caixa #msgOpc{
+	position: relative;
+	display: inline-block;
+	height: 25px;
+	width: 40%;
+	text-align: center;
+}
+.caixa button{
+	position: relative;
+	display: inline-block;
+	height: 29px;
+	width: 20%;
 }
 .basec{
 	background-color: white;
