--- a/stilo.css
+++ b/stilo.css
@@ -158,7 +158,31 @@ body{  background-color: #143850;
 	font-family: arial;
 
 }
+footer div{
+	background-color: #095E7D;
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 40px;
+	margin-top: 10px;
+	text-align: center;
 
+}
+footer div img{
+	position: relative;
+	display: inline-block;
+	height: 70%;
+	top: 50%;
+	transform: translate(0,-50%);
+	margin: auto 5px;
+}
+footer h2{
+	position: relative;
+	display: inline-block;
+	font-family: arial;
+	color: #1F92B1;
+	font-size: 100%;
+}
 
 
 
