--- a/stilo.css
+++ b/stilo.css
@@ -126,7 +126,7 @@ body{  background-color: #143850;
 	text-transform: uppercase;
 	text-decoration: underline;
 }
-.basec img{
+.basec iframe{
 		width: 100%;
 		margin-bottom: 5px;
 }
@@ -200,7 +200,7 @@ footer h2{
 		width: 80%;
 		height: 60%;
 	}
-	.basec img{
+	.basec iframe{
 		width: 100%;
 		margin-bottom: 5px;
 	}
