--- a/stilo.css
+++ b/stilo.css
@@ -101,11 +101,16 @@ body{  background-color: #143850;
 	width: 40%;
 	text-align: center;
 }
-.caixa button{
-	position: relative;
-	display: inline-block;
-	height: 29px;
-	width: 20%;
+.caixa button{position: relative;
+   	 display: inline-block;
+   	 height: 29px;
+	 width: 20%;
+   	 font-family: Arial black;
+  	 border: none;
+   	 border-radius: 5px;
+	 background-color: #1F92B1;
+    	 color: white;
+    	 margin-bottom: 8px;
 }
 .basec{
 	background-color: white;
