--- a/stiloInfo.css
+++ b/stiloInfo.css
@@ -24,6 +24,10 @@ body{  background-color: #143850;
 	font-family: arial black;
 	color: white;
 }
+a{
+	text-decoration: none;
+}
+
 .caixaDep {
 	background-color: white;
 	display: block;
@@ -49,101 +53,14 @@ body{  background-color: #143850;
 .caixaDep a{
 	color:#143850;
 	font-size: 100%;
-	font-family: arial black , sans-serif;
+	font-family: arial black, sans-serif;
 	text-decoration: none;
 }
-.agendar{
-	background-color: white;
-	display: block;
-	position: relative;
-	width: 80%;
-	margin: 0 auto;
-	border-radius: 10px;
-	text-align: center;
-	margin-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+.fixcap{
+	text-decoration: underline;
 }
-.agendar h1, h2, button{
-	position: relative;
-}
-.agendar h1{
-	font-family: Arial black;
-	font-size: 120%;
-	padding-top: 5px;
-	color: #143850;
-}
-.agendar button{
-	font-family: Arial black;
-	border:none;
-	border-radius: 10px;
-	width: 100%;
-	font-size: 200%;
-	position: relative;
-	background-color: #1F92B1;
-	color: white;
-	margin-bottom:8px;
-}
-.agendar iframe{
-	position: relative;
-	display: block;
-	width: 100%;
-	height: 100%;
-}
-.caixa{
 
-	background-color: white;
-	display: block;
-	position: relative;
-	width: 80%;
-	margin: 0 auto;
-	border-radius: 10px;
-	text-align: center;
-	margin-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
-}
-.caixa h1{
-	text-align: center;
-	color: #143850;
-	font-family: arial black;
-	font-size: 150%;
-	text-transform: uppercase;
-	position: relative;
-}
-.caixa #entraNum{
-	position: relative;
-	display: inline-block;
-	height: 25px;
-	width: 30%;
-	text-align: center;
-	border-radius: 5px;
-	border-color:#1F92B1;
-}
-.caixa #msgOpc{
-	position: relative;
-	display: inline-block;
-	height: 25px;
-	width: 40%;
-	text-align: center;
-	border-radius: 5px;
-	border-color:#1F92B1;
-}
-.caixa button{position: relative;
-   	 display: inline-block;
-   	 height: 29px;
-	 width: 20%;
-   	 font-family: Arial black;
-  	 border: none;
-   	 border-radius: 5px;
-	 background-color: #1F92B1;
-    	 color: white;
-    	 margin-bottom: 8px;
-}
+
 .basec{
 	background-color: white;
 	display: block;
@@ -196,39 +113,69 @@ body{  background-color: #143850;
 	font-family: arial;
 
 }
-footer div{
+/*Entregaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
+.caixaEntg img{
+	position: relative;
+	display: inline-block;
+	width: 15%;
+	border-radius: 10%;
+	border:.5px solid black;
+}
+.caixaEntg h2{
+	text-align: center;
+	color: #143850;
+	font-family: arial black;
+	font-size: 120%;
+	text-transform: uppercase;
+	position: relative;
+}
+.caixaEntg .grupSob img{
+	position: relative;
+	display: inline-block;
+	width: 15%;
+	border-radius: 10%;
+}
+.caixaEntg p{
+	position: relative;
+	display: inline-block;
+	width: 68%;
+	text-align: left;
+	font-size: 100%;
+	vertical-align: top;
+}
+.caixaEntg{
+	background-color: white;
+	display: block;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	border-radius: 10px;
+	text-align: center;
+	margin-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+}
+
+
+
+footer{
 	background-color: #095E7D;
 	position: relative;
 	display: block;
 	width: 100%;
-	height: 40px;
 	margin-top: 10px;
 	text-align: center;
-
-}
-footer div img{
-	position: relative;
-	display: inline-block;
-	height: 70%;
-	top: 50%;
-	transform: translate(0,-50%);
-	margin: auto 5px;
 }
 footer h2{
 	position: relative;
 	display: inline-block;
 	font-family: arial;
-	color: #1F92B1;
+	color: white;
 	font-size: 100%;
+	padding: 10px 0px;
 }
-
-
-
-
-
-
-
-
 
 
 
