--- a/stilo.css
+++ b/stilo.css
@@ -1,1 +1,332 @@
-@charset "UTF-8"; *{ margin: 0px; padding: 0px; font-family: arial; } body{ background-color: #143850; position: relative; width: 100%; padding-top: 44px; } /*Menu-----------------------------*/ .menu{ position: fixed; background-color: #095E7D; margin-top:-44px; width: 100%; z-index: 1; box-shadow: 1px 1px 6px rgba(0,0,0, .5); text-align: center; } .menu h1 { position: relative; display: block; font-family: arial black; color: white; } /*Departamentos tit-----------------------------*/ .caixaDep{ background-color: white; display: block; position: relative; width: 80%; margin: 0 auto; text-align: center; padding: 10px; box-shadow: 1px 1px 6px rgba(0,0,0, .5); border-radius:0px 0px 10px 10px; } .caixaDep div{ position: relative; display: inline-block; width: 30%; text-align: center; border:2px solid #1F92B1; font-size: 120%; font-family: arial black , sans-serif; border-radius: 5px; color:#143850; } .caixaDep a{ color:#143850; font-size: 100%; font-family: arial black, sans-serif; text-decoration: none; } .fixcap{ text-decoration: underline; } /*Agendar section-----------------------------*/ .agendar{ background-color: white; display: block; position: relative; width: 80%; margin: 0 auto; border-radius: 10px; text-align: center; margin-top: 10px; padding: 10px; box-shadow: 1px 1px 6px rgba(0,0,0, .5); } .agendar img{ position: relative; display: block; width: 100%; } a{ text-decoration: none; } /* .agendar h1{ font-family: Arial black; font-size: 120%; padding-top: 5px; color: #143850; } .agendar a{ font-family: Arial black; position: relative; background-color: #1F92B1; color: white; text-decoration: none;}.agendar button{ font-family: Arial black; border:none; border-radius: 10px; width: 100%; font-size: 200%; position: relative; background-color: #1F92B1; color: white; margin-bottom:8px; } .agendar iframe{ position: relative; display: block; width: 100%; height: 100%; } */ /*Link whatsapp -------------------------------*/ /*.caixa{ background-color: white; display: block; position: relative; width: 80%; margin: 0 auto; border-radius: 10px; text-align: center; margin-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px; box-shadow: 1px 1px 6px rgba(0,0,0, .5); } .caixa h1{ text-align: center; color: #143850; font-family: arial black; font-size: 120%; text-transform: uppercase; position: relative; } .caixa #entraNum{ position: relative; display: inline-block; height: 25px; width: 30%; text-align: center; border-radius: 5px; border-color:#1F92B1; } .caixa #msgOpc{ position: relative; display: inline-block; height: 25px; width: 40%; text-align: center; border-radius: 5px; border-color:#1F92B1; } .caixa button{position: relative; display: inline-block; height: 29px; width: 20%; font-family: Arial black; border: none; border-radius: 5px; background-color: #1F92B1; color: white; margin-bottom: 8px; }*/ /*Caixa do Sobre------------------------------------*/.caixaSob{ background-color: white; display: block; position: relative; width: 80%; margin: 0 auto; border-radius: 10px; text-align: center; margin-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px; box-shadow: 1px 1px 6px rgba(0,0,0, .5); } .caixaSob h2{ text-align: center; color: #143850; font-family: arial black; font-size: 120%; text-transform: uppercase; position: relative; } .grupSob{ position: relative; display: block; width: 100%; } .caixaSob p{ position: relative; display: inline-block; width: 68%; text-align: left; font-size: 100%; vertical-align: top;} .grupSob img{ position: relative; display: inline-block; width: 15%; border-radius: 10%; border:.5px solid black; } /*entgggggggggggggggggggg-------------------*/ /*.caixaEntg img{ position: relative; display: inline-block; width: 15%; border-radius: 10%; border:.5px solid black; }.caixaEntg h2{ text-align: center; color: #143850; font-family: arial black; font-size: 120%; text-transform: uppercase; position: relative; } .caixaEntg .grupSob img{ position: relative; display: inline-block; width: 15%; border-radius: 10%; } .caixaEntg p{ position: relative; display: inline-block; width: 68%; text-align: left; font-size: 100%; vertical-align: top; }*/ .caixaEntg{ background-color: white; display: block; position: relative; width: 80%; margin: 0 auto; border-radius: 10px; text-align: center; margin-top: 10px; padding:10px; box-shadow: 1px 1px 6px rgba(0,0,0, .5); } .caixaEntg img{ position: relative; display: block; width: 100%; } /*Base produtos----------------------------*/ .basec{ background-color: white; display: block; position: relative; width: 80%; margin: 0 auto; border-radius: 10px; margin-top: 10px; padding: 10px; box-shadow: 1px 1px 6px rgba(0,0,0, .5); } .basec img{ width: 100%; margin-bottom: 5px; border: 1px solid #1F92B1; } .basec .ol{ text-align: center; margin: 0px; padding: 0px; } .basec .li{ list-style: none; display: inline-block; position: relative; width: 30%; margin: 10px 0px 10px 0px; padding: 5px; color: #143850; font-family: arial black; } .li figcaption{ background-color: #1F92B1; position: relative; display: block; width: 100%; padding-top: 5px; padding-bottom: 5px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; color: white; font-family: arial;} /*Base dos produtos---------------------------*/ footer{ background-color: #095E7D; position: relative; display: block; width: 100%; margin-top: 10px; text-align: center; } footer h2{ position: relative; display: inline-block; font-family: arial; color: white; font-size: 100%; padding: 10px 0px; } /*Roda pe-------------------------*/@media only screen and (max-width: 600px) { .basec .li{ width: 80%; height: 60%; } .basec img{ width: 100%; margin-bottom: 5px; } }
+@charset "UTF-8";
+*{
+	margin: 0px;
+	padding: 0px;
+	font-family: arial;
+}
+body{  background-color: #143850;
+	position: relative;
+	width: 100%;
+	padding-top: 44px;
+}
+/*Menu-----------------------------*/
+.menu{
+	position: fixed;
+	background-color: #095E7D;
+	margin-top:-44px;
+	width: 100%;
+	z-index: 1;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+	text-align: center;
+}
+.menu h1 {
+	position: relative;
+	display: block;
+	font-family: arial black;
+	color: white;
+}
+/*Departamentos tit-----------------------------*/
+.caixaDep{
+	background-color: white;
+	display: block;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	text-align: center;
+	padding: 10px;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+	border-radius:0px  0px 10px 10px;
+}
+.caixaDep div{
+	position: relative;
+	display: inline-block;
+	width: 30%;
+	text-align: center;
+	border:2px solid #1F92B1;
+	font-size: 120%;
+	font-family: arial black , sans-serif;
+	border-radius: 5px;
+	color:#143850;
+}
+.caixaDep a{
+	color:#143850;
+	font-size: 90%;
+	font-family: arial black, sans-serif;
+	text-decoration: none;
+}
+.fixcap{
+	text-decoration: underline;
+}
+/*Agendar section-----------------------------*/
+.agendar{
+	background-color: white;
+	display: block;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	border-radius: 10px;
+	text-align: center;
+	margin-top: 10px;
+	padding: 10px;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+}
+.agendar img{
+	position: relative;
+	display: block;
+	width: 100%;
+}
+a{
+	text-decoration: none;
+}
+/*
+.agendar h1{
+	font-family: Arial black;
+	font-size: 120%;
+	padding-top: 5px;
+	color: #143850;
+}
+.agendar a{
+	font-family: Arial black;
+	position: relative;
+	background-color: #1F92B1;
+	color: white;
+	text-decoration: none;
+
+}
+
+.agendar button{
+	font-family: Arial black;
+	border:none;
+	border-radius: 10px;
+	width: 100%;
+	font-size: 200%;
+	position: relative;
+	background-color: #1F92B1;
+	color: white;
+	margin-bottom:8px;
+}
+.agendar iframe{
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+} */
+/*Link whatsapp -------------------------------*/
+/*.caixa{
+	background-color: white;
+	display: block;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	border-radius: 10px;
+	text-align: center;
+	margin-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+}
+.caixa h1{
+	text-align: center;
+	color: #143850;
+	font-family: arial black;
+	font-size: 120%;
+	text-transform: uppercase;
+	position: relative;
+}
+.caixa #entraNum{
+	position: relative;
+	display: inline-block;
+	height: 25px;
+	width: 30%;
+	text-align: center;
+	border-radius: 5px;
+	border-color:#1F92B1;
+}
+.caixa #msgOpc{
+	position: relative;
+	display: inline-block;
+	height: 25px;
+	width: 40%;
+	text-align: center;
+	border-radius: 5px;
+	border-color:#1F92B1;
+}
+.caixa button{position: relative;
+   	 display: inline-block;
+   	 height: 29px;
+	 width: 20%;
+   	 font-family: Arial black;
+  	 border: none;
+   	 border-radius: 5px;
+	 background-color: #1F92B1;
+    	 color: white;
+    	 margin-bottom: 8px;
+}*/
+/*Caixa do Sobre------------------------------------*/
+
+.caixaSob{
+	background-color: white;
+	display: block;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	border-radius: 10px;
+	text-align: center;
+	margin-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+}
+.caixaSob h2{
+	text-align: center;
+	color: #143850;
+	font-family: arial black;
+	font-size: 120%;
+	text-transform: uppercase;
+	position: relative;
+}
+.grupSob{
+	position: relative;
+	display: block;
+	width: 100%;
+}
+.caixaSob p{
+	position: relative;
+	display: inline-block;
+	width: 68%;
+	text-align: left;
+	font-size: 100%;
+	vertical-align: top;
+
+}
+.grupSob img{
+	position: relative;
+	display: inline-block;
+	width: 15%;
+	border-radius: 10%;
+	border:.5px solid black;
+}
+/*entgggggggggggggggggggg-------------------*/
+/*.caixaEntg img{
+	position: relative;
+	display: inline-block;
+	width: 15%;
+	border-radius: 10%;
+	border:.5px solid black;
+}
+
+.caixaEntg h2{
+	text-align: center;
+	color: #143850;
+	font-family: arial black;
+	font-size: 120%;
+	text-transform: uppercase;
+	position: relative;
+}
+.caixaEntg .grupSob img{
+	position: relative;
+	display: inline-block;
+	width: 15%;
+	border-radius: 10%;
+}
+.caixaEntg p{
+	position: relative;
+	display: inline-block;
+	width: 68%;
+	text-align: left;
+	font-size: 100%;
+	vertical-align: top;
+}*/
+.caixaEntg{
+	background-color: white;
+	display: block;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	border-radius: 10px;
+	text-align: center;
+	margin-top: 10px;
+	padding:10px;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+}
+.caixaEntg img{
+	position: relative;
+	display: block;
+	width: 100%;
+}
+/*Base produtos----------------------------*/
+.basec{
+	background-color: white;
+	display: block;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	border-radius: 10px;
+	margin-top: 10px;
+	padding: 10px;
+	box-shadow: 1px 1px 6px rgba(0,0,0, .5);
+}
+.basec img{
+		width: 100%;
+		margin-bottom: 5px;
+		border: 1px solid #1F92B1;
+}
+.basec .ol{
+	text-align: center;
+	margin: 0px;
+	padding: 0px;
+}
+.basec .li{
+	list-style: none;
+	display: inline-block;
+	position: relative;
+	width: 30%;
+	margin: 10px 0px 10px 0px;
+	padding: 5px;
+	color: #143850;
+	font-family: arial black;
+}
+.li figcaption{
+	background-color: #1F92B1;
+    position: relative;
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-bottom-right-radius: 7px;
+    border-bottom-left-radius: 7px;
+    color: white;
+    font-family: arial;
+
+}
+/*Base dos produtos---------------------------*/
+footer{
+	background-color: #095E7D;
+	position: relative;
+	display: block;
+	width: 100%;
+	margin-top: 10px;
+	text-align: center;
+}
+footer h2{
+	position: relative;
+	display: inline-block;
+	font-family: arial;
+	color: white;
+	font-size: 100%;
+	padding: 10px 0px;
+}
+/*Roda pe-------------------------*/
+
+@media only screen and (max-width: 600px) {
+	.basec .li{
+		width: 80%;
+		height: 60%;
+	}
+	.basec img{
+		width: 100%;
+		margin-bottom: 5px;
+	}
+}
