--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     z-index: 5;
 }
 #cabecalho h2{
-    font-family: gadugi;
+    font-family: gadugigi;
     font-size: 250%;
     color: white;
 }
